# appimg-install

./: AGENTS.md  ARCHITETURE.md  Cargo.toml  README.md
src/: main.rs
src/core/: desktop.rs  executor.rs  installer.rs  mod.rs  remover.rs  scanner.rs  validator.rs
src/ui/: cli_args.rs  mod.rs  tui_render.rs
src/utils/: logger.rs  mod.rs
